# torii-core

./: Cargo.toml
.github/workflows/: bench.yml
bins/torii-erc20-synth/src/: main.rs
bins/torii-introspect-bin/: Cargo.toml
bins/torii-introspect-bin/src/: main.rs
bins/torii-tokens/src/: config.rs  main.rs
crates/dojo/: Cargo.toml
crates/dojo/src/: decoder.rs  event.rs  manager.rs
crates/introspect-postgres-sink/src/: processor.rs  sink.rs  table_updates.rs
crates/torii-common/src/: token_uri.rs
crates/torii-ecs-sink/: Cargo.toml  build.rs
crates/torii-ecs-sink/proto/: types.proto
crates/torii-ecs-sink/src/: grpc_service.rs  lib.rs  storage.rs
crates/torii-erc1155/src/: decoder.rs  sink.rs  storage.rs
crates/torii-erc20/src/: grpc_service.rs  storage.rs
crates/torii-erc721/src/: sink.rs  storage.rs
examples/introspect/simple/: main.rs
src/: lib.rs
src/etl/extractor/: block_range.rs
