[package]
name = "torii-ecs-sink"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
futures-util.workspace = true
hex.workspace = true
itertools.workspace = true
prost.workspace = true
prost-types.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = ["postgres", "runtime-tokio-rustls"] }
starknet.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true

torii.workspace = true
torii-dojo.workspace = true
torii-introspect.workspace = true

introspect-types.workspace = true

[build-dependencies]
tonic-build.workspace = true

[lints]
workspace = true
